[gd_scene load_steps=3 format=3 uid="uid://bru7ndsls5uey"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/dialogs/accept-dialog/accept-dialog.gd" id="1"]
[ext_resource type="Theme" uid="uid://ccr2k4swymel8" path="res://assets/themes/default_button_theme.tres" id="2_ona13"]

[node name="Accept Dialog" type="Node2D"]
script = ExtResource("1")

[node name="ShowDialogButton" type="Button" parent="."]
offset_left = 31.0
offset_top = 37.0
offset_right = 134.0
offset_bottom = 77.0
theme = ExtResource("2_ona13")
text = "Show Dialog"

[node name="ResponseLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 40)
offset_left = 175.0
offset_top = 50.0
offset_right = 375.0
offset_bottom = 90.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
position = Vector2i(500, 350)
size = Vector2i(250, 109)
dialog_text = "Please accept this dialog. You have no other choice!"
dialog_autowrap = true

[connection signal="pressed" from="ShowDialogButton" to="." method="_on_ShowDialogButton_pressed"]
[connection signal="close_requested" from="AcceptDialog" to="." method="_on_accept_dialog_close_requested"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
